--- a/lab04.html
+++ b/lab04.html
@@ -5,7 +5,7 @@
   <meta name="description" content="Demonstrates some basic HTML content elements and CSS" />
   <meta name="keywords" content="HTML5, tags" />
   <meta name="author" content="A Lecturer"  />
-  <link rel="stylesheet" href="lab04.css">
+  <link rel="stylesheet" href="styles/lab04.css">
   <title>HTML Structure and Content Elements + CSS</title>
   
 </head>
@@ -33,7 +33,7 @@
       <p>Headings and paragraphs are BLOCK elements</p>
       <h3>Headings</h3>
       <p>There are 6 levels of heading. Headings are logical marked. Do not skip levels. If you want to change the size of a heading, don't change its level - change the CSS.</p>
-      <h3>Paragraphs</h3>
+      <h3 id="section-heading">Paragraphs</h3>
       <p>Paragraphs contain the body text of a web page. You cannot put another block element inside a paragraph.</p>
       
       <h2 id="sc">Special Characters</h2>
@@ -95,13 +95,13 @@
         </thead>
         <tbody>
          <tr>
-           <th scope="row">Jan</th>
+           <th scope="row" class="right-align">Jan</th>
            <td>$60</td>
            <td>$40</td>
            <td>$100</td>
          </tr>
          <tr>
-           <th scope="row">Feb</th>
+           <th scope="row" class="right-align">Feb</th>
            <td>$40</td>
            <td>$40</td>
            <td>$80</td>
